--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>com.example</groupId>
     <artifactId>demo</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0.1</version>
     <name>demo</name>
     <description>demo</description>
     <properties>
@@ -81,10 +81,11 @@
                     <!--                    <repository>${project.artifactId}</repository>-->
                     <repository>registry.cn-beijing.aliyuncs.com/iamnowhere/devops_demo</repository>
                     <!-- 镜像版本号 -->
-                    <tag>1.1.1</tag>
+                    <tag>${project.version}</tag>
                     <buildArgs>
                         <!-- 参数，提供给dockerfile使用 -->
-                        <JAR_FILE>target/devops_demo1.jar</JAR_FILE>
+<!--                        <JAR_FILE>target/devops_demo_0502.jar</JAR_FILE>-->
+                        <JAR_FILE>target/${project.build.finalName}.jar</JAR_FILE>
                     </buildArgs>
 
                 </configuration>
