--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -87,6 +87,7 @@
                         <!--                        <JAR_FILE>target/devops_demo_0502.jar</JAR_FILE>-->
                         <JAR_FILE>target/${project.build.finalName}.jar</JAR_FILE>
                     </buildArgs>
+                    <contextDirectory>${project.basedir}/Dockerfile</contextDirectory>
 
                 </configuration>
 
